# python-project-lvl2

./: .coverage  .coveragerc  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: app.py  diff.py  engine.py  generate_diff.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: after.json  after.yml  after_complex.json  after_complex.yml  answer_complex_default.txt  answer_complex_plain.txt  answer_print.txt  answer_simple_plain.txt  before.yml  before_complex.json  before_complex.yml  test.txt  test_json.json
